# NDK-Usage-and-Wifi-Scanner

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/matrix/matrix/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/wifi/wifi_ap/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MatrixOperations.cpp  MatrixOperations.h  matrix_jni.cpp
app/src/main/java/com/matrix/matrix/: MainActivity.kt  MatrixAdapter.kt  MatrixCalculator.kt
app/src/main/java/com/wifi/wifi_ap/: MainActivity.kt  ResultsActivity.kt
app/src/main/res/animator/: card_lift_animation.xml
app/src/main/res/drawable/: edit_text_border.xml  edit_text_rounded.xml  ic_signal_high.xml  ic_signal_low.xml  ic_signal_medium.xml  log_background.xml  radio_selector.xml  result_cell_background.xml  scrollbar_thumb.xml  scrollbar_track.xml  signal_high_background.xml  signal_low_background.xml  signal_medium_background.xml  signal_strength_background.xml
app/src/main/res/layout/: activity_main.xml  activity_results.xml  dialog_comparison_results.xml  dialog_readings_result.xml  item_comparison_result.xml  item_matrix_cell.xml  item_matrix_row.xml  item_result_cell.xml  item_wifi_network.xml  operation_selector.xml  spinner_dropdown_item.xml  spinner_item.xml
app/src/main/res/values/: colors.xml  font_certs.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/test/java/com/matrix/matrix/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
